# opengl-room

./: .gitignore  CMakeLists.txt  README.md
ConsoleApplication1/: ConsoleApplication1.vcxproj  glad.c  main.cpp
shader/: colors.fs  frag.frag
